--- a/pom.xml
+++ b/pom.xml
@@ -16,17 +16,23 @@
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <jacoco.version>0.7.7.201606060606</jacoco.version>
+        <javalin.version>3.6.0</javalin.version>
         <javamoney.version>1.1</javamoney.version>
         <org.slf4j.jcl-over-slf4j.version>1.7.26</org.slf4j.jcl-over-slf4j.version>
+        <slf4-simple.version>1.7.28</slf4-simple.version>
         <guava.version>18.0</guava.version>
         <apache.commons.version>3.5</apache.commons.version>
         <jackson.version>2.10.1</jackson.version>
         <apache-commons-lang.version>3.0</apache-commons-lang.version>
         <gson.version>2.8.6</gson.version>
+        <classgraph.version>4.8.34</classgraph.version>
         <jackson-kotlin.version>2.9.9</jackson-kotlin.version>
         <jackson-datatype-money.version>1.1.1</jackson-datatype-money.version>
         <swagger-core.version>2.0.8</swagger-core.version>
         <dagger.version>2.16</dagger.version>
+        <rest-assured.version>4.1.2</rest-assured.version>
+        <junit.version>4.12</junit.version>
+        <mockito.version>1.9.5</mockito.version>
     </properties>
 
     <modules>
@@ -64,7 +70,7 @@
             <dependency>
                 <groupId>io.javalin</groupId>
                 <artifactId>javalin</artifactId>
-                <version>3.6.0</version>
+                <version>${javalin.version}</version>
             </dependency>
             <!--Siblings -->
             <dependency>
@@ -87,7 +93,7 @@
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-simple</artifactId>
-                <version>1.7.28</version>
+                <version>${slf4-simple.version}</version>
             </dependency>
 
             <!-- Guava -->
@@ -144,7 +150,7 @@
             <dependency>
                 <groupId>io.github.classgraph</groupId>
                 <artifactId>classgraph</artifactId>
-                <version>4.8.34</version>
+                <version>${classgraph.version}</version>
             </dependency>
 
             <dependency>
@@ -157,6 +163,27 @@
                 <groupId>com.google.dagger</groupId>
                 <artifactId>dagger</artifactId>
                 <version>${dagger.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.rest-assured</groupId>
+                <artifactId>rest-assured</artifactId>
+                <version>${rest-assured.version}</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>${junit.version}</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-all</artifactId>
+                <version>${mockito.version}</version>
+                <scope>test</scope>
             </dependency>
 
         </dependencies>
